--- a/css/StyleDay.css
+++ b/css/StyleDay.css
@@ -1,13 +1,15 @@
 body{
+    margin: 0px;
     font-family: Arial;
     color: Black;
     position: relative;
-    background: Ivory;
+    background: #DBDBDB;
 }
 a:link{color:Black; text-decoration: none;}
 a:visited{color:Black;}
 a:hover{color:Darkgreen;}
 a:active{color:Darkgreen;}
+/*index*/
 .index-header{
     width: 100%;
     height: 100%;
@@ -36,7 +38,139 @@ a:active{color:Darkgreen;}
     margin-left: 10px;
     margin-right: 10px;
     font-family: Monospace;
-    font-size: 50px;
+    font-size: 45px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    user-select: text;
+}
+/*projects*/
+.projects-header{
+    width: 100%;
+    height: 100%;
+    background-color: #C7C7C7;
+    text-align: left;
+    line-height: 100px;
+    margin: 0px;
+    font-family: Arial;
+    font-size: 18px;
+    letter-spacing: 0.2px;
+    user-select: none;
+}
+#projects-header-a{
+    text-align: left;
+    margin: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+#projects-header-kb{
+    width: 100%;
+    height: 100%;
+    background-color: Transparent;
+    text-align: center;
+    margin: auto;
+    margin-left: 25px;
+    margin-right: 15px;
+    font-family: Monospace;
+    font-size: 45px;
+    font-weight: lighter;
+    letter-spacing: 0.5px;
+    user-select: text;
+}
+/*blogs*/
+.blogs-header{
+    width: 100%;
+    height: 100%;
+    background-color: #C7C7C7;
+    text-align: left;
+    line-height: 100px;
+    margin: 0px;
+    font-family: Arial;
+    font-size: 18px;
+    letter-spacing: 0.2px;
+    user-select: none;
+}
+#blogs-header-a{
+    text-align: left;
+    margin: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+#blogs-header-kb{
+    width: 100%;
+    height: 100%;
+    background-color: Transparent;
+    text-align: center;
+    margin: auto;
+    margin-left: 25px;
+    margin-right: 15px;
+    font-family: Monospace;
+    font-size: 45px;
+    font-weight: lighter;
+    letter-spacing: 0.5px;
+    user-select: text;
+}
+/*resources*/
+.resources-header{
+    width: 100%;
+    height: 100%;
+    background-color: #C7C7C7;
+    text-align: left;
+    line-height: 100px;
+    margin: 0px;
+    font-family: Arial;
+    font-size: 18px;
+    letter-spacing: 0.2px;
+    user-select: none;
+}
+#resources-header-a{
+    text-align: left;
+    margin: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+#resources-header-kb{
+    width: 100%;
+    height: 100%;
+    background-color: Transparent;
+    text-align: center;
+    margin: auto;
+    margin-left: 25px;
+    margin-right: 15px;
+    font-family: Monospace;
+    font-size: 45px;
+    font-weight: lighter;
+    letter-spacing: 0.5px;
+    user-select: text;
+}
+/*A&C*/
+.aboutAndcontact-header{
+    width: 100%;
+    height: 100%;
+    background-color: #C7C7C7;
+    text-align: left;
+    line-height: 100px;
+    margin: 0px;
+    font-family: Arial;
+    font-size: 18px;
+    letter-spacing: 0.2px;
+    user-select: none;
+}
+#aboutAndcontact-header-a{
+    text-align: left;
+    margin: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+#aboutAndcontact-header-kb{
+    width: 100%;
+    height: 100%;
+    background-color: Transparent;
+    text-align: center;
+    margin: auto;
+    margin-left: 25px;
+    margin-right: 15px;
+    font-family: Monospace;
+    font-size: 45px;
     font-weight: lighter;
     letter-spacing: 0.5px;
     user-select: text;
