--- a/css/StyleDay.css
+++ b/css/StyleDay.css
@@ -175,3 +175,86 @@ a:active{color:Darkgreen;}
     letter-spacing: 0.5px;
     user-select: text;
 }
+#aboutAndcontact-div-introduction{
+    float: left;
+    width: 300px;
+    height: auto;
+    background-color: Transparent;
+    margin-left: 40px;
+    margin-top: 80px;
+}
+#aboutAndcontact-div-img{
+    width: 300px;
+    height: 300px;
+    background-color: Transparent;
+}
+#aboutAndcontact-div-resume{
+    width: 300px;
+    height: 100%;
+    background-color: Transparent;
+    text-align: left;
+    font-family: Arial;
+    font-size: 17px;
+}
+#aboutAndcontact-div-resume-contact{
+    background-color: Transparent;
+    text-align: left;
+    color: #505050;
+}
+#aboutAndcontact-div-content{
+    float: right;
+    background-color: Transparent;
+    margin-top: 55px;
+    margin-right: 40px;
+}
+#aboutAndcontact-div-eduExp{
+    float: left;
+    width: auto;
+    height: auto;
+    background-color: Transparent;
+    margin-right: 52px;
+    text-align: left;
+    font-family: Arial;
+    font-size: 17px;
+}
+#aboutAndcontact-div-eduExp-content{
+    width: 600px;
+    height: auto;
+    background-color: Transparent;
+    text-align: left;
+    line-height: 4px;
+    font-size: 16px;
+}
+#aboutAndcontact-div-content-other{
+    float: right;
+    width: auto;
+    background-color: Transparent;
+}
+#aboutAndcontact-div-other-proExp{
+    width: auto;
+    height: auto;
+    background-color: Transparent;
+    text-align: left;
+    font-family: Arial;
+    font-size: 17px;
+}
+#aboutAndcontact-div-other-proExp-content{
+    width: auto;
+    height: auto;
+}
+#aboutAndcontact-div-other-resExp{
+    width: auto;
+    height: auto;
+    background-color: Transparent;
+    text-align: left;
+    font-family: Arial;
+    font-size: 17px;
+}
+#aboutAndcontact-div-other-resExp-content{
+    width: 680px;
+    height: auto;
+    background-color: Transparent;
+    text-align: left;
+    line-height: 0px;
+    font-size: 16px;
+}
