--- a/css/styleDay.css
+++ b/css/styleDay.css
@@ -42,7 +42,6 @@ a:link{color: #1e272e; text-decoration: none;}
 a:visited{color: #1e272e;}
 a:hover{color: #005500;}
 a:active{color: #005500;}
-/* A&C */
 .div-root{
     width: auto;
     height: auto;
@@ -52,58 +51,77 @@ a:active{color: #005500;}
     padding-right: 40px;
     padding-bottom: 40px;
 }
-    .div-root-contact{
+/* projects */
+    .div-root-proContent{
+        width: auto;
+        height: auto;
+        padding-left: 20px;
+        padding-bottom: 2px;
+        line-height: 40%;
+        user-select: none;
+    }
+/* researches */
+    .div-root-resContent{
+        width: auto;
+        height: auto;
+        padding-left: 20px;
+        padding-bottom: 2px;
+        line-height: 40%;
+        user-select: none;
+    }
+/* A&C */
+    .div-root-acContact{
         width: auto;
         height: auto;
         padding-top: 28px;
         float: left;
         left: 0;
         line-height: 145%;
-        font-size: 14px;
         user-select: none;
     }
-        #div-root-contact-span{
+        #div-root-acContact-span{
             user-select: text;
         }
-    .div-root-content{
+    .div-root-acContent{
         width: auto;
         height: auto;
         padding-left: 50px;
         float: right;
         right: 0;
+        user-select: none;
     }
-        .div-root-content-edu{
+        .div-root-acContent-edu{
             width: auto;
             height: auto;
             padding-right: 60px;
             float: left;
         }
-            .div-root-content-eduDetail{
+            .div-root-acContent-eduDetail{
                 width: auto;
                 height: auto;
                 padding-bottom: 2px;
                 line-height: 40%;
             }
-        .div-root-content-other{
+        .div-root-acContent-other{
             width: auto;
             height: auto;
             float: right;
         }
-            .div-root-content-other-pro{
+            .div-root-acContent-other-pro{
                 width: auto;
                 height: auto;
             }
-                .div-root-content-other-proDetail{
+                .div-root-acContent-other-proDetail{
                     width: auto;
                     height: auto;
                     padding-bottom: 2px;
                     line-height: 40%;
                 }
-            .div-root-content-res{
+            .div-root-acContent-res{
                 width: auto;
                 height: auto;
             }
-                .div-root-content-resDetail{
+                .div-root-acContent-resDetail{
                     width: auto;
                     height: auto;
                     padding-bottom: 2px;
