--- a/css/styleDay.css
+++ b/css/styleDay.css
@@ -150,6 +150,7 @@ a:active{color: #005500;}
     padding-top: 110px;
     padding-right: 40px;
     padding-bottom: 40px;
+    font-size: 16px;
     user-select: none;
 }
     .div-coRoot-coDirectory{
@@ -170,20 +171,28 @@ a:active{color: #005500;}
         height: auto;
         padding-right: 320px;
         float: left;
+        text-align: justify;
         word-break:break-all;
     }
-        #div-coRoot-coNotice-h1{
-            text-align: center;
-        }
         .div-coRoot-coNotice{
             width: auto;
             height: auto;
             padding-top: 10px;
+            font-size: 14px;
             font-weight: 800;
             text-align: center;
             color: #c23616;
         }
             #div-coRoot-coNotice-p{
-                line-height: 1px;
+                line-height: 0px;
                 color: Transparent;
+            }
+            #div-coRoot-coNotice-h1{
+                text-align: center;
+            }
+            #div-coRoot-coNotice-dateAndMark{
+                font-size: 12px;
+                line-height: 0px;
+                text-align: center;
+                color: #485460;
             }
