--- a/css/styleDay.css
+++ b/css/styleDay.css
@@ -174,6 +174,18 @@ a:active{color: #005500;}
         word-wrap: break-word;
         word-break:break-all;
     }
+        #div-coRoot-coContent-h1{
+            text-align: center;
+        }
+        #div-coRoot-coContent-dateAndMark{
+            font-size: 12px;
+            line-height: 0px;
+            text-align: center;
+            color: #485460;
+        }
+        #div-coRoot-coContent-chageWord{
+            color: #959ca4;
+        }
         .div-coRoot-coNotice{
             width: auto;
             height: auto;
@@ -187,12 +199,12 @@ a:active{color: #005500;}
                 line-height: 0px;
                 color: Transparent;
             }
-            #div-coRoot-coNotice-h1{
-                text-align: center;
-            }
-            #div-coRoot-coNotice-dateAndMark{
-                font-size: 12px;
-                line-height: 0px;
-                text-align: center;
-                color: #485460;
-            }
+        .div-coRoot-coContent-form{
+            width: 100%;
+            height: auto;
+            padding-top: 40px;
+            padding-bottom: 20px;
+            font-size: 14px;
+            line-height: 150%;
+            text-align: center;
+        }
