--- a/css/StylePc1366.css
+++ b/css/StylePc1366.css
@@ -10,7 +10,8 @@
   cursor: default;
 }
 #iconfont {
-  padding-top: 10%;
+  padding-left: 1rem;
+  padding-right: 1rem;
   font-family: "iconfont" !important;
   font-size: 3rem;
   font-style: normal;
@@ -19,9 +20,6 @@
 }
 html{
   height: 100%;
-  /*margin: 0;*/
-  /*background: -webkit-linear-gradient(left, #eaeded, #eaededf4, #eaededf1, #f3f6f6);*/
-	/*font-family: Roboto Mono;*/
   font-size: 62.5%;
   color: #283654;
 }
@@ -37,11 +35,11 @@ h1{
   font-weight: 600;
 }
 .div-root{
+  max-width: 1000px;
   padding: 10vh 10vw;
   text-align: center;
   display: grid;
   grid-template-columns: 2fr 3fr;
-  max-width: 1000px;
   grid-column-gap: 0vw;
 }
 @media only screen and (max-width: 800px){
@@ -56,28 +54,22 @@ h1{
   header{
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    display: flex;
     flex-direction: column;
   }
     #headerTitle{
-      /*padding-top: 4rem;*/
       font-size: 3rem;
-      /*line-height: 10rem;*/
       user-select: none;
       font-weight: 600;
       text-align: center;
       align-items: center;
-      /*position: fixed;*/
-      /*left: 4rem;*/
       display: flex;
       flex-direction: column;
     }
-    #headerOrcid{
-      font-size: 1.5rem;
-      /*line-height: 8rem;*/
-      font-weight: 600;
+    .headerContact{
+      padding-top: 10%;
     }
   .div-rootMenu{
     font-size: 1.7rem;
@@ -85,9 +77,6 @@ h1{
     user-select: none;
     text-align: center;
     align-items: center;
-    /*position: fixed;*/
-    /*top: 14rem;*/
-    /*left: 4rem;*/
     display: flex;
     flex-direction: column;
     justify-content: center;
