--- a/css/StylePc1366.css
+++ b/css/StylePc1366.css
@@ -32,6 +32,7 @@ body{
   background-image: linear-gradient(275deg, #f8f8f8 0%, #ccdce7 100%);
 }
 h1{
+  padding: 0;
   font-weight: 600;
 }
 .div-root{
@@ -42,7 +43,7 @@ h1{
   grid-template-columns: 2fr 3fr;
   grid-column-gap: 0vw;
 }
-@media only screen and (max-width: 800px){
+@media only screen and (max-width: 850px){
   .div-root{
     padding: 10vw;
     position: initial;
@@ -59,6 +60,19 @@ h1{
     display: flex;
     flex-direction: column;
   }
+    .headerContact{
+      padding-top: 10%;
+    }
+    .headerPersonalDetails{
+      margin-top: 15%;
+      margin-bottom: 10%;
+      font-size: 1.5rem;
+      font-weight: 600;
+      line-height: 2.85rem;
+      text-align: left;
+      align-items: left;
+      justify-content: left;
+    }
     #headerTitle{
       font-size: 3rem;
       user-select: none;
@@ -67,9 +81,6 @@ h1{
       align-items: center;
       display: flex;
       flex-direction: column;
-    }
-    .headerContact{
-      padding-top: 10%;
     }
   .div-rootMenu{
     font-size: 1.7rem;
@@ -80,6 +91,10 @@ h1{
     display: flex;
     flex-direction: column;
     justify-content: center;
+  }
+  .div-rootEducationExperience{
+    margin-left: 10%;
+    font-size: 1.5rem;
   }
 a:link{color: #283654; text-decoration: none;}
 a:visited{color: #283654;}
