--- a/css/StylePc1366.css
+++ b/css/StylePc1366.css
@@ -30,6 +30,8 @@ body{
   justify-content: center;
   display: flex;
   background-image: linear-gradient(275deg, #f8f8f8 0%, #ccdce7 100%);
+  background-size: cover;
+  background-attachment: fixed;
 }
 h1{
   padding: 0;
