--- a/css/StylePc1366.css
+++ b/css/StylePc1366.css
@@ -71,12 +71,10 @@ h1{
 }
 .div-root-research{
   max-width: 1000px;
-  padding: 4vh 4vw;
   font-size: 1.5rem;
 }
 @media only screen and (max-width: 850px){
   .div-root-research{
-    padding: 10vw;
     position: initial;
   }
 }
@@ -106,11 +104,18 @@ h1{
     flex-direction: column;
   }
     .header-NormalHeader{
-      padding-bottom: 5rem;
+      min-width: 100%;
+      height: auto;
+      padding-left: 4vh;
+      padding-top: 2vw;
+      padding-bottom: 4rem;
+      /*position: sticky;*/
+      /*top: 0;*/
+      z-index: 1;
       text-align: left;
       align-items: normal;
       justify-content: normal;
-      display: flex;
+      display: grid;
     }
     @media only screen and (max-width: 850px){
       .header-NormalHeader{
@@ -154,7 +159,8 @@ h1{
     justify-content: center;
   }
   .div-root-research-Content{
-    /*max-width: 2rem;*/
+    max-width: 80vw;
+    padding-left: 4vh;
     text-align: justify;
     word-wrap: break-word;
   }
