--- a/css/StylePc1366.css
+++ b/css/StylePc1366.css
@@ -137,6 +137,7 @@ h1{
     }
     @media only screen and (max-width: 850px){
       .header-NormalHeader{
+        padding-left: 0;
         padding-bottom: 2rem;
         text-align: left;
         align-items: normal;
@@ -196,6 +197,7 @@ h1{
   }
   @media only screen and (max-width: 850px){
     .div-root-research-Content{
+      padding-left: 0;
       font-size: 1rem;
     }
   }
