--- a/css/StylePc1366.css
+++ b/css/StylePc1366.css
@@ -41,7 +41,6 @@ body{
   max-height: max-content;
   text-align: center;
   justify-content: normal;
-  /*display: grid;*/
 }
 @media only screen and (max-width: 850px){
   .body-others{
@@ -112,6 +111,10 @@ h1{
     grid-template-columns: 1fr;
     grid-auto-flow: row;
   }
+}
+.div-root-content{
+  max-width: 100%;
+  font-size: 1.5rem;
 }
   header{
     width: 100%;
@@ -213,6 +216,23 @@ h1{
       margin-top: 1.5rem;
       margin-bottom: 1.5rem;
       line-height: 2rem;
+    }
+  .div-root-content-Content{
+    max-width: 100%;
+    padding-left: 4vh;
+    text-align: center;
+    word-wrap: break-word;
+  }
+  @media only screen and (max-width: 850px){
+    .div-root-content-Content{
+      padding-left: 0;
+      font-size: 1.1rem;
+    }
+  }
+    #div-root-content-Content-abstract{
+      font-size: 1.3rem;
+      padding-top: 1rem;
+      padding-bottom: 2rem;
     }
 a:link{color: #283654; text-decoration: none;}
 a:visited{color: #283654;}
