--- a/css/StylePc1366.css
+++ b/css/StylePc1366.css
@@ -48,6 +48,7 @@ body{
   }
 }
 h1{
+  max-width: max-content;
   padding: 0;
   font-weight: 600;
 }
@@ -116,8 +117,13 @@ h1{
   max-width: 100%;
   font-size: 1.5rem;
 }
+@media only screen and (max-width: 850px){
+  .div-root-content{
+    position: initial;
+  }
+}
   header{
-    width: 100%;
+    /*width: 100%;*/
     height: 100%;
     align-items: center;
     justify-content: center;
@@ -125,7 +131,7 @@ h1{
     flex-direction: column;
   }
     .header-NormalHeader{
-      min-width: 100%;
+      max-width: 100%;
       height: auto;
       padding-left: 4vh;
       padding-top: 2vw;
@@ -140,6 +146,29 @@ h1{
     }
     @media only screen and (max-width: 850px){
       .header-NormalHeader{
+        padding-left: 0;
+        padding-bottom: 2rem;
+        text-align: left;
+        align-items: normal;
+        justify-content: normal;
+        display: grid;
+      }
+    }
+    .header-Content{
+      height: auto;
+      padding-left: 4vh;
+      padding-top: 2vw;
+      padding-bottom: 4rem;
+      /*position: sticky;*/
+      /*top: 0;*/
+      z-index: 1;
+      text-align: left;
+      align-items: normal;
+      justify-content: normal;
+      display: grid;
+    }
+    @media only screen and (max-width: 850px){
+      .header-Content{
         padding-left: 0;
         padding-bottom: 2rem;
         text-align: left;
@@ -218,13 +247,13 @@ h1{
       line-height: 2rem;
     }
   .div-root-content-Content{
-    max-width: 100%;
-    padding-left: 4vh;
+    width: 100vw;
     text-align: center;
     word-wrap: break-word;
   }
   @media only screen and (max-width: 850px){
     .div-root-content-Content{
+      width: 80vw;
       padding-left: 0;
       font-size: 1.1rem;
     }
@@ -233,6 +262,13 @@ h1{
       font-size: 1.3rem;
       padding-top: 1rem;
       padding-bottom: 2rem;
+    }
+    @media only screen and (max-width: 850px){
+      #div-root-content-Content-abstract{
+        font-size: 1rem;
+        padding-top: 1rem;
+        padding-bottom: 2rem;
+      }
     }
 a:link{color: #283654; text-decoration: none;}
 a:visited{color: #283654;}
