--- a/css/StylePc1366.css
+++ b/css/StylePc1366.css
@@ -58,7 +58,7 @@ table{
 }
 th, td{
   line-height: 2.4rem;
-  border: 1px dotted #787878c6;
+  border: 1px dotted #787878;
 }
 .div-root{
   max-width: 1000px;
