--- a/css/StylePc1366.css
+++ b/css/StylePc1366.css
@@ -5,11 +5,12 @@
   font-family: "Roboto Mono";
   -webkit-user-select: none;
   user-select: none;
+  overflow-x:hidden
 }
 *:not(a):not(a*){
   cursor: default;
 }
-#iconfont {
+#iconfont{
   padding-left: 1rem;
   padding-right: 1rem;
   font-family: "iconfont" !important;
@@ -52,12 +53,15 @@ h1{
   padding: 0;
   font-weight: 600;
 }
+h3{
+  font-size: 1.25em;
+}
 table{
   width: 100%;
   border-collapse: collapse;
 }
 th, td{
-  line-height: 2.4rem;
+  line-height: 2.5rem;
   border: 1px dotted #787878;
 }
 .div-root{
@@ -271,7 +275,7 @@ th, td{
       padding-top: 1rem;
       padding-right: 8vh;
       padding-bottom: 2rem;
-      font-size: 1.3rem;
+      font-size: 1.4rem;
     }
     @media only screen and (max-width: 850px){
       .div-root-content-Content-table{
@@ -279,7 +283,7 @@ th, td{
         padding-top: 1rem;
         padding-right: 0;
         padding-bottom: 2rem;
-        font-size: 1rem;
+        font-size: 1.1rem;
       }
     }
     #div-root-content-Content-abstract{
@@ -296,14 +300,36 @@ th, td{
     }
     #div-root-content-Content-text{
       padding-left: 8vh;
-      padding-top: 2vh;
+      padding-top: 3vh;
       padding-right: 8vh;
+      padding-bottom: 1vh;
+      line-height: 2.1rem;
       text-align: justify;
     }
     @media only screen and (max-width: 850px){
       #div-root-content-Content-text{
         padding-left: 0;
-        padding-top: 2vh;
+        padding-top: 2.5vh;
+        padding-right: 0;
+        padding-bottom: 1vh;
+      }
+    }
+    #div-root-content-Content-note{
+      padding-left: 8vh;
+      padding-top: 1vh;
+      padding-right: 8vh;
+      padding-bottom: 10vh;
+      font-family: "kalam";
+      color: #445069;
+      line-height: 2.1rem;
+      text-align: justify;
+    }
+    @media only screen and (max-width: 850px){
+      #div-root-content-Content-note{
+        padding-left: 0;
+        padding-top: 1vh;
+        padding-right: 0;
+        padding-bottom: 10vh;
       }
     }
 a:link{color: #283654; text-decoration: none;}
