--- a/css/StylePc1366.css
+++ b/css/StylePc1366.css
@@ -224,7 +224,6 @@ th, td{
   .div-root-project-Content{
     max-width: 80vw;
     padding-left: 4vh;
-    line-height: 2.85rem;
     text-align: justify;
     word-wrap: break-word;
   }
@@ -232,13 +231,19 @@ th, td{
     .div-root-project-Content{
       padding-left: 0;
       font-size: 1.1rem;
-      line-height: 1.8rem;
     }
   }
+    #div-root-project-Content-title{
+      padding-bottom: 1.5rem;
+    }
+    @media only screen and (max-width: 850px){
+      #div-root-project-Content-title{
+        padding-bottom: 1.1rem;
+      }
+    }
   .div-root-blog-Content{
     max-width: 80vw;
     padding-left: 4vh;
-    line-height: 2.85rem;
     text-align: justify;
     word-wrap: break-word;
   }
@@ -246,7 +251,6 @@ th, td{
     .div-root-blogs-Content{
       padding-left: 0;
       font-size: 1.1rem;
-      line-height: 1.8rem;
     }
   }
   .div-root-research-Content{
@@ -262,6 +266,14 @@ th, td{
       padding-left: 0;
       font-size: 1.1rem;
       line-height: 1.8rem;
+    }
+  }
+  #div-root-research-Content-title{
+    padding-bottom: 1.5rem;
+  }
+  @media only screen and (max-width: 850px){
+    #div-root-research-Content-title{
+      padding-bottom: 1.1rem;
     }
   }
   .div-root-about-EducationExperience{
