--- a/css/StylePc1080pDayIndex.css
+++ b/css/StylePc1080pDayIndex.css
@@ -1,7 +1,7 @@
 @font-face{
   font-family: "iconfont";
   font-style: normal;
-  src: url(../resources/fonts/iconfont.ttf)
+  src: url(../resources/fonts/iconfont.woff2)
 }
 @font-face{
   font-family: 'Roboto Mono';
