--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,30 +1,30 @@
 @font-face{
   font-family: "iconfont";
   font-style: normal;
-  src: url(../resources/fonts/iconfont.ttf);
+  src: url(../resources/fonts/iconfont.woff2);
 }
-@font-face{
+/*@font-face{
   font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
   src: url(../resources/fonts/RobotoCondensed-Light.ttf);
-}
+}*/
 @font-face{
   font-family: "Bad Script";
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url(../resources/fonts/BadScript-Regular.ttf);
+  src: url(../resources/fonts/BadScript-Regular.woff2);
 }
 @font-face{
   font-family: 'kalam';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(../resources/fonts/Kalam-Regular.ttf);
+  src: url(../resources/fonts/Kalam-Regular.woff2);
 }
-@font-face{
+/*@font-face{
   font-family: 'Reenie Beanie';
   font-style: normal;
   font-weight: 400;
@@ -117,4 +117,4 @@
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/robotomono/v22/L0xuDF4xlVMF-BfR8bXMIhJHg45mwgGEFl0_3vq_ROW4.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+}*/
