--- a/css/StylePc1080pNight.css
+++ b/css/StylePc1080pNight.css
@@ -1,6 +1,6 @@
 @import url('fonts.css');
 [v-cloak] {
-  display: none !important;
+  display: none !important
 }
 *{
   margin: 0;
@@ -11,7 +11,7 @@
   overflow-x:hidden
 }
 *:not(a):not(a*){
-  cursor: default;
+  cursor: default
 }
 #iconfont{
   padding-left: 1rem;
@@ -20,15 +20,15 @@
   font-size: 3rem;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale
 }
 html{
   height: 100%;
   font-size: 62.5%;
-  color: #f8f3e7;
+  color: #f8f3e7
 }
 .html-others{
-  height: auto;
+  height: auto
 }
 body{
   min-height: 100%;
@@ -38,34 +38,34 @@ body{
   /*display: flex;*/
   background-image: linear-gradient(275deg, #2b3241 0%, #1e232e 100%);
   background-size: cover;
-  background-attachment: fixed;
+  background-attachment: fixed
 }
 .body-others{
   height: auto;
   max-height: max-content;
   text-align: center;
-  justify-content: normal;
+  justify-content: normal
 }
 @media only screen and (max-width: 850px){
   .body-others{
-    justify-content: center;
+    justify-content: center
   }
 }
 h1{
   max-width: max-content;
   padding: 0;
-  font-weight: 600;
+  font-weight: 600
 }
 h3{
-  font-size: 1.25em;
+  font-size: 1.25em
 }
 table{
   width: 100%;
-  border-collapse: collapse;
+  border-collapse: collapse
 }
 th, td{
   line-height: 2.5rem;
-  border: 1px dotted #e8e8e8;
+  border: 1px dotted #e8e8e8
 }
 .div-root{
   max-width: 1000px;
@@ -73,7 +73,7 @@ th, td{
   text-align: center;
   display: grid;
   grid-template-columns: 2fr 3fr;
-  grid-column-gap: 0vw;
+  grid-column-gap: 0vw
 }
 @media only screen and (max-width: 850px){
   .div-root{
@@ -81,34 +81,34 @@ th, td{
     position: initial;
     grid-row-gap: 5vh;
     grid-template-columns: 1fr;
-    grid-auto-flow: row;
+    grid-auto-flow: row
   }
 }
 .div-root-project{
   max-width: 1000px;
-  font-size: 1.5rem;
+  font-size: 1.5rem
 }
 @media only screen and (max-width: 850px){
   .div-root-project{
-    position: initial;
+    position: initial
   }
 }
 .div-root-blog{
   max-width: 1000px;
-  font-size: 1.5rem;
+  font-size: 1.5rem
 }
 @media only screen and (max-width: 850px){
   .div-root-blog{
-    position: initial;
+    position: initial
   }
 }
 .div-root-research{
   max-width: 1000px;
-  font-size: 1.5rem;
+  font-size: 1.5rem
 }
 @media only screen and (max-width: 850px){
   .div-root-research{
-    position: initial;
+    position: initial
   }
 }
 .div-root-about{
@@ -117,7 +117,7 @@ th, td{
   text-align: center;
   display: grid;
   grid-template-columns: 2fr 3fr;
-  grid-column-gap: 10vw;
+  grid-column-gap: 10vw
 }
 @media only screen and (max-width: 850px){
   .div-root-about{
@@ -125,16 +125,16 @@ th, td{
     position: initial;
     grid-row-gap: 5vh;
     grid-template-columns: 1fr;
-    grid-auto-flow: row;
+    grid-auto-flow: row
   }
 }
 .div-root-content{
   max-width: 100%;
-  font-size: 1.5rem;
+  font-size: 1.5rem
 }
 @media only screen and (max-width: 850px){
   .div-root-content{
-    position: initial;
+    position: initial
   }
 }
   header{
@@ -143,7 +143,7 @@ th, td{
     align-items: center;
     justify-content: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: column
   }
     .header-NormalHeader{
       max-width: 100%;
@@ -157,7 +157,7 @@ th, td{
       text-align: left;
       align-items: normal;
       justify-content: normal;
-      display: grid;
+      display: grid
     }
     @media only screen and (max-width: 850px){
       .header-NormalHeader{
@@ -166,7 +166,7 @@ th, td{
         text-align: left;
         align-items: normal;
         justify-content: normal;
-        display: grid;
+        display: grid
       }
     }
     .header-Content{
@@ -180,7 +180,7 @@ th, td{
       text-align: left;
       align-items: normal;
       justify-content: normal;
-      display: grid;
+      display: grid
     }
     @media only screen and (max-width: 850px){
       .header-Content{
@@ -189,11 +189,11 @@ th, td{
         text-align: left;
         align-items: normal;
         justify-content: normal;
-        display: grid;
+        display: grid
       }
     }
     .header-Contact{
-      padding-top: 10%;
+      padding-top: 10%
     }
     .header-PersonalDetails{
       margin-top: 15%;
@@ -203,7 +203,7 @@ th, td{
       line-height: 2.85rem;
       text-align: left;
       align-items: left;
-      justify-content: left;
+      justify-content: left
     }
     #header-Title{
       font-size: 3rem;
@@ -212,7 +212,7 @@ th, td{
       text-align: center;
       align-items: center;
       display: flex;
-      flex-direction: column;
+      flex-direction: column
     }
   .div-root-Menu{
     font-size: 1.7rem;
@@ -222,46 +222,46 @@ th, td{
     align-items: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: center
   }
   .div-root-project-Content{
     max-width: 80vw;
     padding-left: 4vh;
     text-align: justify;
-    word-wrap: break-word;
+    word-wrap: break-word
   }
   @media only screen and (max-width: 850px){
     .div-root-project-Content{
       padding-left: 0;
-      font-size: 1.1rem;
+      font-size: 1.1rem
     }
   }
     #div-root-project-Content-title{
-      padding-bottom: 1.5rem;
+      padding-bottom: 1.5rem
     }
     @media only screen and (max-width: 850px){
       #div-root-project-Content-title{
-        padding-bottom: 1.1rem;
+        padding-bottom: 1.1rem
       }
     }
   .div-root-blog-Content{
     max-width: 80vw;
     padding-left: 4vh;
     text-align: justify;
-    word-wrap: break-word;
+    word-wrap: break-word
   }
   @media only screen and (max-width: 850px){
     .div-root-blog-Content{
       padding-left: 0;
-      font-size: 1.1rem;
+      font-size: 1.1rem
     }
   }
   #div-root-blog-Content-title{
-    padding-bottom: 1.5rem;
+    padding-bottom: 1.5rem
   }
   @media only screen and (max-width: 850px){
     #div-root-blog-Content-title{
-      padding-bottom: 1.1rem;
+      padding-bottom: 1.1rem
     }
   }
   .div-root-research-Content{
@@ -270,21 +270,21 @@ th, td{
     line-height: 2.85rem;
     /*text-align: justify;*/
     text-align: left;
-    word-wrap: break-word;
+    word-wrap: break-word
   }
   @media only screen and (max-width: 850px){
     .div-root-research-Content{
       padding-left: 0;
       font-size: 1.1rem;
-      line-height: 1.8rem;
+      line-height: 1.8rem
     }
   }
   #div-root-research-Content-title{
-    padding-bottom: 1.5rem;
+    padding-bottom: 1.5rem
   }
   @media only screen and (max-width: 850px){
     #div-root-research-Content-title{
-      padding-bottom: 1.1rem;
+      padding-bottom: 1.1rem
     }
   }
   .div-root-about-EducationExperience{
@@ -292,23 +292,23 @@ th, td{
     font-size: 1.5rem;
     text-align: left;
     align-items: left;
-    justify-content: left;
+    justify-content: left
   }
     .div-root-about-EducationExperience-Details{
       margin-top: 1.5rem;
       margin-bottom: 1.5rem;
-      line-height: 2rem;
+      line-height: 2rem
     }
   .div-root-content-Content{
     width: 100vw;
     text-align: center;
-    word-wrap: break-word;
+    word-wrap: break-word
   }
   @media only screen and (max-width: 850px){
     .div-root-content-Content{
       width: 80vw;
       padding-left: 0;
-      font-size: 1.2rem;
+      font-size: 1.2rem
     }
   }
     .div-root-content-Content-table{
@@ -316,7 +316,7 @@ th, td{
       padding-top: 1rem;
       padding-right: 8vh;
       padding-bottom: 2rem;
-      font-size: 1.4rem;
+      font-size: 1.4rem
     }
     @media only screen and (max-width: 850px){
       .div-root-content-Content-table{
@@ -324,7 +324,7 @@ th, td{
         padding-top: 1rem;
         padding-right: 0;
         padding-bottom: 2rem;
-        font-size: 1.1rem;
+        font-size: 1.1rem
       }
     }
     .div-root-content-Content-version{
@@ -334,7 +334,7 @@ th, td{
       margin-right: 8vh;
       margin-bottom: 1rem;
       font-size: 1.6rem;
-      text-align: left;
+      text-align: left
     }
     @media only screen and (max-width: 850px){
       .div-root-content-Content-version{
@@ -342,11 +342,11 @@ th, td{
         margin-top: 1rem;
         margin-right: 0;
         margin-bottom: 1rem;
-        font-size: 1.2rem;
+        font-size: 1.2rem
       }
     }
     .div-root-content-Content-version:hover .div-root-content-Content-versionList{
-      display: block;
+      display: block
     }
       .div-root-content-Content-versionList{
         padding: 1rem;
@@ -356,23 +356,23 @@ th, td{
         display: none;
         background-color: #4e5961;
         background-size: cover;
-        border-radius: 5px 0 20px 0;
+        border-radius: 5px 0 20px 0
       }
     #div-root-content-Content-abstract{
       padding-top: 1rem;
       padding-bottom: 2rem;
-      font-size: 1.3rem;
+      font-size: 1.3rem
     }
     @media only screen and (max-width: 850px){
       #div-root-content-Content-abstract{
         padding-top: 1rem;
         padding-bottom: 2rem;
-        font-size: 1rem;
+        font-size: 1rem
       }
     }
     #div-root-content-Content-table-abstract{
       text-align: justify;
-      justify-content: left;
+      justify-content: left
     }
     #div-root-content-Content-text{
       padding-left: 8vh;
@@ -380,14 +380,14 @@ th, td{
       padding-right: 8vh;
       padding-bottom: 1vh;
       line-height: 2.1rem;
-      text-align: justify;
+      text-align: justify
     }
     @media only screen and (max-width: 850px){
       #div-root-content-Content-text{
         padding-left: 0;
         padding-top: 2.5vh;
         padding-right: 0;
-        padding-bottom: 1vh;
+        padding-bottom: 1vh
       }
     }
     #div-root-content-Content-note{
@@ -398,14 +398,14 @@ th, td{
       font-family: "kalam";
       color: #f4efe4;
       line-height: 2.1rem;
-      text-align: justify;
+      text-align: justify
     }
     @media only screen and (max-width: 850px){
       #div-root-content-Content-note{
         padding-left: 0;
         padding-top: 1vh;
         padding-right: 0;
-        padding-bottom: 1vh;
+        padding-bottom: 1vh
       }
     }
     #div-root-content-Content-image{
@@ -423,7 +423,7 @@ th, td{
         padding-left: 0;
         padding-top: 1vh;
         padding-right: 0;
-        padding-bottom: 1vh;
+        padding-bottom: 1vh
       }
     }
     #div-root-content-Content-attachment{
@@ -432,14 +432,14 @@ th, td{
       padding-right: 8vh;
       padding-bottom: 0vh;
       line-height: 1.6rem;
-      text-align: justify;
+      text-align: justify
     }
     @media only screen and (max-width: 850px){
       #div-root-content-Content-attachment{
         padding-left: 0;
         padding-top: 1vh;
         padding-right: 0;
-        padding-bottom: 0vh;
+        padding-bottom: 0vh
       }
     }
     #div-root-content-Content-attachmentEND{
@@ -448,21 +448,21 @@ th, td{
       padding-right: 8vh;
       padding-bottom: 5vh;
       line-height: 1.6rem;
-      text-align: justify;
+      text-align: justify
     }
     @media only screen and (max-width: 850px){
       #div-root-content-Content-attachmentEND{
         padding-left: 0;
         padding-top: 1vh;
         padding-right: 0;
-        padding-bottom: 3vh;
+        padding-bottom: 3vh
       }
     }
-a:link{color: #f8f3e7; text-decoration: none;}
-a:visited{color: #f8f3e7;}
-a:focus{transition: color .5s ease-in-out; color: #84bb73;}
-a:hover{color: #84bb73;}
-a:active{color: #84bb73;}
+a:link{color: #f8f3e7; text-decoration: none}
+a:visited{color: #f8f3e7}
+a:focus{transition: color .5s ease-in-out; color: #84bb73}
+a:hover{color: #84bb73}
+a:active{color: #84bb73}
 body{
-  display: flex !important;
+  display: flex !important
 }
