--- a/css/StylePc1080pNightIndex.css
+++ b/css/StylePc1080pNightIndex.css
@@ -1,14 +1,14 @@
 @font-face{
   font-family: "iconfont";
   font-style: normal;
-  src: url(../resources/fonts/iconfont.woff2) format("woff2")
+  src: url(../resources/fonts/iconfont.woff) format("woff")
 }
 @font-face{
   font-family: 'Roboto Mono';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(../resources/fonts/RobotoMono-Regular.woff2) format("woff2")
+  src: url(../resources/fonts/RobotoMono-Regular.woff) format("woff")
 }
 *{
   margin: 0;
