--- a/css/StylePc1080pDay.css
+++ b/css/StylePc1080pDay.css
@@ -1,28 +1,28 @@
 @font-face{
   font-family: "iconfont";
   font-style: normal;
-  src: url(../resources/fonts/iconfont.woff) format("woff")
+  src: url(../resources/fonts/iconfont.woff2) format("woff2")
 }
 @font-face{
   font-family: "Bad Script";
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url(../resources/fonts/BadScript-Regular.woff) format("woff")
+  src: url(../resources/fonts/BadScript-Regular.woff) format("woff2")
 }
 @font-face{
   font-family: 'kalam';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(../resources/fonts/Kalam-Regular.woff) format("woff")
+  src: url(../resources/fonts/Kalam-Regular.woff2) format("woff2")
 }
 @font-face{
   font-family: 'Roboto Mono';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(../resources/fonts/RobotoMono-Regular.woff);
+  src: url(../resources/fonts/RobotoMono-Regular.woff2) format("woff2")
 }
 [v-cloak] {
   display: none !important
