--- a/css/StylePc1080pNight.css
+++ b/css/StylePc1080pNight.css
@@ -22,7 +22,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(../resources/fonts/RobotoMono-Regular.woff) format("woff2")
+  src: url(../resources/fonts/RobotoMono-Regular.woff2) format("woff2")
 }
 [v-cloak] {
   display: none !important
